--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "babel-plugin-import": "^1.13.5",
     "core-js": "^3.6.5",
+    "vant": "^3.5.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-marquee": "^3.0.7",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
